fix: symbol font content shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import 'material-symbols';
-
-.material-symbols-outlined {
-  font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24;
-}
 
 .left-arrow {
   position: relative;
@@ -288,9 +279,6 @@
   width: 80%;
   height: 2px;
   background-color: theme(colors.accent);
-}
-
-.experience-content > div {
 }
 
 @keyframes firstLine {
