--- a/src/foundation/styles/globals.css
+++ b/src/foundation/styles/globals.css
@@ -39,3 +39,24 @@ body {
   src: url('Pangolin-Regular.ttf');
   font-weight: 400;
 }
+
+.material-symbols-outlined {
+  display: none;
+  font-family: 'Material Symbols Outlined';
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+  font-weight: normal;
+  font-style: normal;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+}
+
+.font-loaded .material-symbols-outlined {
+  display: inline-block;
+}
